# atkv2

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  atkv.pc.in  circle.yml
cmake/: FindCMocka.cmake
data/: custom.css
demo/: barplot.c  coreorfc.c  display.c  dotplot.c  imagewindow.c  lineplot.c  pieplot.c  robotuser.c  scatterplot.c  scatterplot3d.c  slicewindow.c  trackbar.c
demo/chart/: linechart.c
demos/: main.c
doc/: array.md  desenhando.md  gui.md  guia.md  ift.md  main.md  medicas.md  metricas.md
include/at/: array.h  chart.h  core.h  error.h  grapharray.h  gui.h  ift.h  ift_gpu.h  img_io.h  imgproc.h  list.h  macro.h  oo.h  optimization.h  pqueue.h  queue.h
include/at/chart/: axis.h  axisbarcategory.h  axisbase.h  axiscategory.h  axisdatetime.h  axisvalue.h  barplot.h  barset.h  chart.h  chartviewer.h  chartwindow.h  io.h  labelcfg.h  line.h  lineplot.h  marker.h  pen.h  pieplot.h  render.h  scatterplot.h  seriesarea.h  seriesbar.h  seriesbase.h  seriespie.h  seriesscatter.h  subchart.h  type.h
include/at/core/: array.h  datetime.h  error.h  grapharray.h  i18n-lib.h  list.h  macro.h  mat4.h  optimization.h  pqueue.h  queue.h  range.h  scc.h  slist.h  stat.h  timezone.h  type.h  vec.h  version.h.in  znzfile.h
include/at/gui/: display.h  imageviewer.h  imagewindow.h  sliceviewer.h  slicewindow.h  trackbar.h  type.h
include/at/imgproc/: color.h  dicom.h  drawing.h  dt.h  ift.h  img_io.h  nifti.h  robotuser.h  seed.h  znzfile.h
include/at/oo/: object.h  type.h
src/: array.c  error.c  grapharray.c  ift.c  ift.cu  img_io.c  list.c  pqueue.c  queue.c
src/chart/: axis.c  barplot.c  barset.c  chart.c  chartviewer.c  chartwindow.c  io.c  line.c  lineplot.c  pieplot.c  render.c  scatterplot.c  seriesbar.c  seriesscatter.c  subchart.c
src/core/: array.c  core.c  error.c  grapharray.c  list.c  mat4.c  pqueue.c  queue.c  range.c  scc.c  slist.c  stat.c  vec.c  znzfile.c
src/gui/: display.c  imageviewer.c  imagewindow.c  sliceviewer.c  slicewindow.c  trackbar.c
src/imgproc/: color.c  dicom.c  drawing.c  dt.c  ift.c  img_io.c  nifti.c  robotuser.c  seed.c  znzfile.c
src/oo/: object.c  type.c
tests/: test_array.c  test_grapharray.c  test_ift.c  test_img_io.c  test_pqueue.c
tests/chart/: test_line.c
tests/core/: test_array.c  test_grapharray.c  test_list.c  test_mat4.c  test_pqueue.c  test_queue.c  test_slist.c  test_stat.c  test_vec.c
tests/imgproc/: test_color.c  test_dicom.c  test_drawing.c  test_dt.c  test_ift.c  test_img_io.c  test_nifti.c  test_robotuser.c
tests/oo/: test_object.c
